- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P1: Critical
 - 
    6.6
 - 
    None
 
- 
        
 - 
        6f1f44f7d (dev), 86f3cac44 (6.5), 5727ca33b (6.6)
 - 
        2023wk26FOQtforAndroid
 
It seems that camera does not work at all on Android after this patch
Need to be fixed
| For Gerrit Dashboard: QTBUG-114889 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 488000,3 | Android: fix not working camera | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 488107,2 | Android: fix not working camera | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 | 
| 488108,2 | Android: fix not working camera | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |