Android: fix not working camera

There is a regression after 8e7b5d5a42337036cb2dcd59a1e07489756e67da
commit. Camera does not work at all on Android. Everything because of
changes in QFFmpegMediaIntegration.

Android is also a linux (a mobile operating system based on a modified
Linux kernel). That is why, after mentioned commit,
QFFmpegMediaIntegration is trying to use QV4L2CameraDevices rather
than QAndroidVideoDevices.

This commit sets m_videoDevices correctly for Android again

Fixes: QTBUG-114889
Change-Id: I7daabe12652febdd3dec5db9ec3309098a12738f
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 6f1f44f7dd84103e6fd679a2d009aa91d159898d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>